--- a/ceshi.css
+++ b/ceshi.css
@@ -1,2 +1,16 @@
-body{width: 960px;margin-left: auto;margin-right: auto;}
-body{background-image: url(pkuchenyan.github.io/WechatIMG60.jpeg);}
+.bgimg{
+    position:fixed;
+    top: 0;
+    left: 0;
+    width:100%;
+    height:100%;
+    min-width: 1000px;
+    z-index:-10;
+    zoom: 1;
+    background-color: #fff;
+    background: url(../img/bg_login.jpg) no-repeat;
+    background-size: cover;
+    -webkit-background-size: cover;
+    -o-background-size: cover;
+    background-position: center 0;
+}
