--- a/ceshi.css
+++ b/ceshi.css
@@ -1,6 +1,1 @@
-  body {
-        background:url("pkuchenyan.github.io/WechatIMG60.jpeg") no-repeat center center;
-		background-size:cover;
-        background-attachment:fixed;
-	}
-
+  body { no-repeat center center;background-size:cover;background-attachment:fixed;}
