--- a/ceshi.css
+++ b/ceshi.css
@@ -1,2 +1,3 @@
   body { no-repeat center center;background-size:cover;background-attachment:fixed;}
-#a{color: RGB(255,133,10)}
+#a{color: RGB(255,133,10);}
+#b{color: rgb(255,133,10);}
