--- a/ceshi.css
+++ b/ceshi.css
@@ -1,3 +1,4 @@
   body { no-repeat center center;background-size:cover;background-attachment:fixed;}
 #a{color: RGB(255,133,10);}
 #b{color: rgb(255,133,10);}
+#c{color: rgb(155,39,39);font-family: STheiti}
