--- a/ceshi.css
+++ b/ceshi.css
@@ -1,4 +1,4 @@
-  body { no-repeat center center;background-size:cover;background-attachment:fixed;}
+  body { no-repeat center center;background-size:cover;background-attachment:fixed;width: 960px;margin-left: auto;margin-right: auto}
 #a{color: RGB(255,133,10);}
 #b{color: rgb(255,133,10);}
 #c{color: rgb(155,39,39);font-family: STheiti}
