--- a/ceshi.css
+++ b/ceshi.css
@@ -2,5 +2,5 @@
 #a{color: RGB(255,133,10);}
 #b{color: rgb(255,133,10);}
 #c{color: rgb(155,39,39);font-family: STheiti}
-#d{color: rgb(255,0,0);}
+#d{color: rgb(255,0,0);font-size: 50px}
 #e{font-style: italic;font-weight: bold;font-size: 50px;color: rgb(0,179,45);}
